--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,8 @@
     "@cloudinary/url-gen": "^1.21.0",
     "dompurify": "^3.2.6",
     "quill": "^2.0.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-player": "^3.3.1",
     "react-quill": "^2.0.0",
     "react-quill-new": "^3.6.0",
@@ -26,8 +26,8 @@
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@tailwindcss/typography": "^0.5.16",
-    "@types/react": "npm:types-react@^19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@^19.0.0-rc.1",
+    "@types/react": "^19.1.11",
+    "@types/react-dom": "^19.1.5",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
