--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-lite-youtube-embed": "^2.5.6",
     "react-player": "^3.3.1",
     "react-quill": "^2.0.0",
     "react-quill-new": "^3.6.0",
