fixing editpost.jsx

--- a/client/.env.production
+++ b/client/.env.production
@@ -1,1 +1,6 @@
 VITE_API_URL=https://web-production-5b94.up.railway.app
+VITE_CLERK_PUBLISHABLE_KEY=pk_test_dmFsaWQtbWFsYW11dGUtOTkuY2xlcmsuYWNjb3VudHMuZGV2JA
+
+
+VITE_CLOUDINARY_CLOUD_NAME=dthgsm4xo
+VITE_CLOUDINARY_UPLOAD_PRESET=blog_unsigned
